--- a/styles/adaptation/min1920.css
+++ b/styles/adaptation/min1920.css
@@ -60,6 +60,12 @@
   .catalog__sublist {
     max-height: 341px;
   }
+
+  /*--modal--*/
+
+  .modal__wrap {
+    max-width: 48%;
+  }
 }
 
 @media screen and (min-width: 1920px) and (-webkit-min-device-pixel-ratio: 2),
