--- a/styles/sections/catalog.css
+++ b/styles/sections/catalog.css
@@ -231,15 +231,19 @@
   color: var(--background_btn);
 }
 
+.catalog__img {
+  margin-bottom: 12px;
+}
 .catalog__subtitle {
-  margin-top: 12px;
-  margin-bottom: 10px;
+  margin-top: 0;
+  margin-bottom: 14px;
   font-weight: 600;
   font-size: 24px;
   line-height: 33px;
 }
 
 .catalog__meta {
+  margin-top: 0;
   margin-bottom: 7px;
   padding: 0;
   font-size: 12px;
@@ -253,8 +257,6 @@
   font-size: 16px;
   line-height: 32px;
 }
-
-
 
 .catalog__desc,
 .catalog__img,
