--- a/styles/sections/contacts.css
+++ b/styles/sections/contacts.css
@@ -1,24 +1,32 @@
 .contacts {
-  padding-top: 12px;
-}
-
-.contacts__container {
+  position: relative;
   display: flex;
-  flex-flow: column nowrap;  
-  padding-bottom: 40px;
+  flex-flow: column nowrap;
+  padding-top: 12px;
 }
 
 .contacts__heading {
   margin-top: 0;
-  margin-bottom: 12px;
+  margin-bottom: 78px;
   padding-right: 15px;
   padding-left: 13px;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 38px;
+}
+
+.contacts__container {
+  order: 2;
+  display: flex;
+  flex-flow: column nowrap;
+  padding-right: 15px;
+  padding-left: 13px;
+  padding-bottom: 40px;
 }
 
 .contacts__adress {
-  margin-bottom: 20px;
-  padding-right: 15px;
-  padding-left: 13px;
+  position: absolute;
+  top: 61px;
   font-style: normal;
 }
 
@@ -38,7 +46,7 @@
 
 .contacts__map {
   display: flex;
-  margin-bottom: 18px;
+  margin-bottom: 12px;
   width: 100%;
   height: 320px;
   background-color: var(--grey_99);
@@ -52,8 +60,7 @@
 .feedback-form {
   display: flex;
   flex-flow: column nowrap;
-  padding-right: 15px;
-  padding-left: 15px;
+  margin-bottom: 18px;
 }
 
 .feedback-form__heading {
@@ -67,7 +74,7 @@
   font-weight: 400;
 }
 
-.feedback-form__wrap {  
+.feedback-form__wrap {
   position: relative;
   display: flex;
   flex-flow: column nowrap;
@@ -95,11 +102,10 @@
 .contacts__social {
   display: flex;
   flex-flow: column nowrap;
-  padding-right: 15px;
-  padding-left: 13px;
 }
 
 .contacts__social__heading {
+  margin-top: 0;
   margin-bottom: 7px;
 }
 
