--- a/styles/sections/gallery.css
+++ b/styles/sections/gallery.css
@@ -12,7 +12,7 @@
   flex-flow: column nowrap;
   align-content: center;
   padding-top: 50px;
-  padding-bottom: 54px;
+  padding-bottom: 70px;
 }
 
 .gallery__heading {
@@ -196,6 +196,7 @@
 
 .gallery__showroom {
   position: relative;
+  margin-bottom: 20px;
 }
 
 .swiper-wrapper_gallery {
@@ -269,7 +270,7 @@
 }
 
 .gallery__note {
-  margin-top: 20px;
+  margin: 0;
   padding-right: 20px;
   font-size: 16px;
   font-weight: 500;
