--- a/styles/sections/modal.css
+++ b/styles/sections/modal.css
@@ -15,6 +15,7 @@
 }
 
 .modal__wrap {
+  position: relative;
   margin: 5% auto 0;
   max-width: 90%;
   display: flex;
@@ -42,8 +43,7 @@
 .modal__close-btn {
   position: absolute;
   top: 0;
-  right: 5%;
-  margin-top: 5%;
+  right: 0;
   padding: 15px;
   border: none;
   background-color: inherit;
@@ -84,6 +84,8 @@
 }
 
 .modal__year {
+  display: block;
+  margin-bottom: 12px;
   padding: 0;
   font-size: 12px;
   line-height: 16px;
@@ -98,6 +100,6 @@
 }
 
 .modal_desc {
-  padding-top: 17px;
+  margin: 0;
   padding-bottom: 0;
 }
