--- a/styles/sections/projects.css
+++ b/styles/sections/projects.css
@@ -18,6 +18,8 @@
 .tooltip {
   position: relative;
   display: inline-flex;
+  width: 20px;
+  height: 1em;
 }
 
 .tooltip__desc {
@@ -47,7 +49,11 @@
 }
 
 .tooltip__btn {
-  padding: 8px 6px;
+  align-self: baseline;
+  position: absolute;
+  bottom: 0;
+  width: 18px;
+  height: 18px;
   border: 1px solid var(--background_btn);
   border-radius: 50%;
   font-weight: 700;
@@ -56,6 +62,29 @@
   color: var(--background_btn);
   transition: color .2s, background-color .2s;
 }
+
+.tooltip__btn::after {
+  content: "";
+  position: absolute;
+  bottom: 2px;
+  left: 7px;
+  width: 2px;
+  height: 8px;
+  background-color: var(--background_btn);
+  transition: background-color .2s, transform .2s;
+}
+
+.tooltip__btn::before {
+  content: "";
+  position: absolute;
+  bottom: 12px;
+  left: 7px;
+  width: 2px;
+  height: 2px;
+  background-color: var(--background_btn);
+  transition: background-color .2s, transform .2s;
+}
+
 
 .tooltip__btn:hover+.tooltip__desc,
 .tooltip__btn:focus+.tooltip__desc {
@@ -68,6 +97,29 @@
   background-color: var(--background_btn);
 }
 
+.tooltip__btn:hover.tooltip__btn::after {
+  height: 12px;
+  transform: rotate(45deg);
+}
+
+.tooltip__btn:hover.tooltip__btn::before {
+  bottom: 2px;
+  height: 12px;
+  transform: rotate(-45deg);
+}
+
+.tooltip__btn:hover.tooltip__btn::after,
+.tooltip__btn:hover.tooltip__btn::before,
+.tooltip__btn:focus.tooltip__btn::after,
+.tooltip__btn:focus.tooltip__btn::before {
+
+
+
+
+
+  background-color: var(--text_light);
+}
+
 .projects__link {
   outline: none;
   font-size: 16px;
@@ -76,8 +128,12 @@
   color: var(--background_btn);
 }
 
+.projects__desc {
+  margin-bottom: 10px;
+}
+
 .projects__subheading {
-  margin-top: 10px;
+  margin-top: 0;
   margin-bottom: 13px;
   letter-spacing: 0.035em;
 }
@@ -122,7 +178,7 @@
 }
 
 .swiper-button-prev_projects {
-  left: 0;  
+  left: 0;
 }
 
 .swiper-button-next_projects {
@@ -132,8 +188,7 @@
 .swiper-button-prev_projects::after,
 .swiper-button-next_projects::after {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 11px;
   content: "";
   width: 8px;
   height: 8px;
@@ -142,11 +197,14 @@
   border-color: transparent transparent var(--background_dark) var(--background_dark);
 }
 
+
 .swiper-button-prev_projects::after {
+  left: 13px;
   transform: rotate(45deg);
 }
 
 .swiper-button-next_projects::after {
+  right: 13px;
   transform: rotate(-135deg);
 }
 
